--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,9 @@ requires-python = ">=3.10"
 dependencies = [
     "langchain-openai>=0.1.0",
     "langchain>=0.1.0",
+    "langchain-core>=0.1.0",
     "langchain-community>=0.1.0",
+    "langchain-text-splitters>=0.1.0",
     "mcp>=1.0.0",
     "anyio>=4.0.0",
     "faiss-cpu>=1.7.4",
