mejor, ya llama al MCP

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,9 @@ objetivo.md
 llama.log
 output-llm.md
 rag-mcp.py~
+fix1.md
+chat_session_analysis.md
+COMPLETION_REPORT.md
+DOCS_INDEX.md
+FLOW_DIAGRAM.md
+QUICKSTART.md
