--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,4 +16,6 @@ dependencies = [
     "fastapi>=0.104.0",
     "uvicorn>=0.24.0",
     "httpx>=0.25.0",
+    "flask>=3.1.2",
+    "requests>=2.32.5",
 ]
